# Hackathon-II_The-Evolution-of-Todo

./: .gitignore  .mcp.json  CLAUDE.md  Hackathon II - Todo Spec-Driven Development.md  README.md  SINGLETON_AXIOS_SERVICE.md  tasks.json
.claude/: settings.local.json
.claude/agents/: auth-expert.md  backend-expert.md  backend-feature-builder-v2.md  backend-refactoring-optimizer.md  backend-testing.md  database-expert.md  figma-expert-agent.md  frontend-expert.md  fullstack-architect.md  todo-task-manager.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  KNOWN_ISSUES.md  PHASE3_PROGRESS.md  README.md  TEST_MCP.md  app.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  test_mcp.py
backend/alembic/: env.py
backend/alembic/versions/: 004_add_conversations.py  005_add_messages.py
backend/lib/: jwt_utils.py  password.py
backend/middleware/: jwt.py
backend/routes/: auth.py  chat.py  tasks.py
backend/schemas/: __init__.py  auth.py  chat.py  tasks.py
backend/src/: __init__.py
backend/src/agent/: __init__.py  config.py  runner.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py
backend/src/models/: __init__.py  conversation.py  message.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_password.py  test_tasks.py
backend/tests/e2e/: __init__.py  test_multi_action_crud.py  test_task_creation.py
backend/tests/integration/: test_chatbot_integration.py  test_intent_recognition.py  test_mcp_agent.py
backend/tests/unit/: test_agent_config.py
frontend/: .prettierignore  .prettierrc  CLAUDE.md  FIGMA_DESIGN_SPEC.md  README.md  ROADMAP.md  SETUP_COMMANDS.md  SETUP_COMPLETE.md  SONNER_USAGE.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
phase-1/: README.md  pyproject.toml
phase-1/src/: main.py  pyproject.toml
phase-1/src/todo_app/: cli.py  task_manager.py  ui.py
phase-1/tests/: test_cli.py  test_interactive_menu.py  test_task_manager.py  test_ui.py
specs/: PHASE-3-REFERENCE.md  architecture.md  overview.md
src/: pyproject.toml
(+211 files in other folders)
